Fix spacing on media

--- a/src/style.scss
+++ b/src/style.scss
@@ -19,15 +19,10 @@
 @media screen and (max-width: 1299px) {
   #content header {
     justify-content: center;
-    
-  }
-  .contactCard img {
-    // display: none;
   }
   .shadow {
     display: none;
   }
-
 }
 
 // Variables
